--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     ]
   },
   "dependencies": {
+    "@belivvr/aframe-react": "^0.4.2",
+    "aframe": "^1.3.0",
     "preact": "^10.10.0",
     "preact-render-to-string": "^5.2.1",
     "preact-router": "^3.2.1"
