--- a/package.json
+++ b/package.json
@@ -1,52 +1,31 @@
 {
+  "name": "orbitaleye",
   "private": true,
-  "name": "preact-typescript-replit",
   "version": "0.0.0",
-  "license": "MIT",
+  "type": "module",
   "scripts": {
-    "build": "preact build",
-    "serve": "sirv build --cors --single",
-    "dev": "preact watch",
-    "lint": "eslint src",
-    "test": "jest"
-  },
-  "eslintConfig": {
-    "parser": "@typescript-eslint/parser",
-    "extends": [
-      "preact",
-      "plugin:@typescript-eslint/recommended"
-    ],
-    "ignorePatterns": [
-      "build/"
-    ]
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@belivvr/aframe-react": "^0.4.2",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.11.0",
+    "@thirdweb-dev/react": "^3.6.8",
+    "@thirdweb-dev/sdk": "^3.6.8",
     "aframe": "^1.3.0",
-    "preact": "^10.10.0",
-    "preact-render-to-string": "^5.2.1",
-    "preact-router": "^3.2.1"
+    "ethers": "^5.7.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.5.0"
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.12",
-    "@types/jest": "^27.4.1",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-preact-pure": "^4.0.1",
-    "eslint": "^8.20.0",
-    "eslint-config-preact": "^1.3.0",
-    "jest": "^27.5.1",
-    "jest-preset-preact": "^4.0.5",
-    "preact-cli": "^3.4.0",
-    "sirv-cli": "^2.0.2",
-    "typescript": "^4.5.2"
-  },
-  "jest": {
-    "preset": "jest-preset-preact",
-    "setupFiles": [
-      "<rootDir>/tests/__mocks__/browserMocks.ts",
-      "<rootDir>/tests/__mocks__/setupTests.ts"
-    ]
+    "@types/react": "^18.0.26",
+    "@types/react-dom": "^18.0.9",
+    "@vitejs/plugin-react": "^3.0.0",
+    "typescript": "^4.9.3",
+    "vite": "^4.0.0"
   }
 }
