--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@belivvr/aframe-react": "^0.4.2",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.0",
+    "@react-three/drei": "^9.48.1",
+    "@react-three/fiber": "^8.9.1",
     "@thirdweb-dev/react": "^3.6.8",
     "@thirdweb-dev/sdk": "^3.6.8",
-    "aframe": "^1.3.0",
+    "@types/three": "^0.146.0",
+    "dangerously-set-html-content": "^1.0.12",
     "ethers": "^5.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.5.0"
+    "react-router-dom": "^6.5.0",
+    "three": "^0.148.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
