IPFS File upload

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "dangerously-set-html-content": "^1.0.12",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
+    "ipfs-http-client": "^59.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.5.0",
